wundergraph_cli/src/print_schema/snapshots/wundergraph_cli__print_schema__tests__round_trip.snap
---
source: wundergraph_cli/src/print_schema/mod.rs
expression: r
---
{
  "data": {
    "Users": []
  }
}
